# cs334

./: .gitignore  .gitmodules  README.md  package.json
a1/cs334-a1-t2/: package.json
a1/cs334-a1-t2/.next/: BUILD_ID  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  (+2 more)
misc/: README.md
misc/module3/task1/ccamnote_esp32_camera/main/: CMakeLists.txt  component.mk
misc/module3/task1/ccamnote_esp32_camera/main/include/: config.h  controller_camera.h  util.h  wifi_connect.h  wifi_http_client.h  wifi_ws_client.h
misc/module3/task1/ccamnote_esp32_camera/main/src/: controller_camera.c  main.c  wifi_connect.c  wifi_http_client.c  wifi_ws_client.c
misc/module3/task1/ccamnote_esp32_controller/main/: CMakeLists.txt  component.mk
misc/module3/task1/ccamnote_esp32_controller/main/include/: config.h  controller_buttons.h  controller_joystick.h  controller_touchpad.h  wifi_connect.h  wifi_espnow_client.h  wifi_ws_client.h
misc/module3/task1/ccamnote_esp32_controller/main/src/: controller_buttons.c  controller_joystick.c  controller_touchpad.c  main.c  wifi_connect.c  wifi_espnow_client.c  wifi_ws_client.c
misc/module6/esp32_space_controller/main/: CMakeLists.txt  component.mk
misc/module6/esp32_space_controller/main/include/: bt_helper.h  config.h  controller.h
misc/module6/esp32_space_controller/main/include/bl/: esp_hidd_prf_api.h  hid_dev.h  hidd_le_prf_int.h
misc/module6/esp32_space_controller/main/src/: bt_helper.c  controller.c  main.c
misc/module6/esp32_space_controller/main/src/bl/: esp_hidd_prf_api.c  hid_dev.c  hidd_le_pref_int.c
misc/raspberrypi/: ip.md  uploadip.sh  uploadipservice.txt
raspberrypi/: ip.md  uploadip.sh
src/pages/: _app.tsx  index.tsx
src/styles/: Home.module.scss  Module1.module.scss  Module1T1.module.scss  _mixins.scss  globals.scss
(+196 files in other folders)
